mixins (fix): set border z-index

--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -59,6 +59,7 @@
 @mixin border($size, $image_or_color...) {
   border: #{$size} solid transparent;
   position: relative;
+  z-index: 1;
 
   &::before {
     content: "";
